--- a/day7/demo/shuohsuo/package.json
+++ b/day7/demo/shuohsuo/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "formidable": "^1.1.1",
     "gm": "^1.23.0",
     "md5": "^2.2.1",
